--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -562,6 +562,12 @@ img {
   }
 }
 
+.contact__mail {
+  margin: auto;
+  width: 25%;
+  padding: 10px;
+}
+
 @media screen and (min-width: 768px) {
   body {
     margin: 0;
